--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,5 +65,7 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4'
     implementation 'com.google.firebase:firebase-database-ktx'
 
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
+
 
 }
